# Data_Exploration_and_Modeling

./: .gitattributes  README.md
Documentation/: Hadassah Clinical Trial Normal Subject Notes.docx  README.md  Setup.docx  Tedence Setup IB.docx
Documentation/Previous_Experiements/: EMF Sensor Data Processing (2).docx  README.md
Processed_Data/: combined_features_and_targets_volunteer1.csv
Processed_Data/Signal_Files/: Additional_1_downsampled_25hz.parquet  Additional_2_downsampled_25hz.parquet  Additional_3_downsampled_25hz.parquet  Insulin_Clamp_10_downsampled_25hz.parquet  Insulin_Clamp_1_downsampled_25hz.parquet  Insulin_Clamp_2_downsampled_25hz.parquet  Insulin_Clamp_3_downsampled_25hz.parquet  Insulin_Clamp_4_downsampled_25hz.parquet  Insulin_Clamp_5_downsampled_25hz.parquet  Insulin_Clamp_6_downsampled_25hz.parquet  Insulin_Clamp_7_downsampled_25hz.parquet  (+16 more)
Raw_Data/: FilteredLabels.xlsx  patients.json
Reports/: Manual Hypothesis Testing with PSD 21.06.2025.docx
Results_and_Visualizations/: README.md
Supplementary_Data/: Labeling.py  simulation_gui.py  spectrogram_bounds.json
Tasks/: README.md
notebooks/: README.md  pyproject.toml  requirements.txt  step0_preprocessing2.ipynb  step1_feature_construction.ipynb  visualization_of_EMF_CGM.ipynb
notebooks/Addons/: LDA analysis for state transition.ipynb
notebooks/Special Case - Model on Volunteer1 dataset/: step0_special_case_preprocessing3.ipynb  step1_special_case_feature_construction.ipynb  step2_special_case_LSTM_model2.ipynb
utils/: read_tdms.py  read_tdms_improved.py  readme.MD
(+1 files in other folders)
